2008-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Specify StringComparison.Ordinal when 
	calling String.StartsWith.
	* AvoidUnnecessarySpecializationRule.cs: Specify StringComparison.
	Ordinal when calling String.StartsWith. Simplify namespace matching
	method.

2008-11-10  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Prettify the suggestion by
	showing generic parameters as SomeType<T,U> instead of SomeType`2.

2008-11-10  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Ignore non-generic
	collection types suggestions as we do not check if the suggestion
	would be possible to apply or not (wrt casts etc).

2008-11-10  Cedric Vivier  <cedricv@neonux.com>

	* AvoidLackOfCohesionOfMethodsRule.cs: Count LCOM correctly wrt
	static and visible fields.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Maintainability.mdp:
	* Gendarme.Rules.Maintainability.csproj: Activate makefile integration
	for all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Fix double cast (self-test)

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Use generic parameter owner
	instead of genericity of current method (GetConstructedGenericType).

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Handle correctly generic arguments
	and/or non-generic arguments used as a generic argument of a generic method.
	Fixes false positives on such cases and makes the rule suggests a proper
	type instead of the infamous !!0 on real positive cases (such as
	SpecializedClass.GenericMethodArgument testcase).

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Fix NRE when gp.Owner is not a TypeReference.